<resources>
    <string name="app_name">Hammer_Systems_Test_Task</string>
    <string name="profile">Профиль</string>
    <string name="basket">Корзина</string>
    <string name="menu">Меню</string>
    <string name="combo">Комбо</string>
    <string name="price">от 199 р</string>
    <string name="pizza">Пицца</string>
    <string name="Dessert">Десерты</string>
    <string name="drinks">Напитки</string>
    <string name="snacks">Закуски</string>
    <string name="moscow">Москва</string>
    <string name="sale_30">Скидка 30%</string>
    <string name="birthday_present">Подарок в день рождения</string>
    <string name="choose_city">Выбрать город</string>
</resources>