<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <HorizontalScrollView
                android:id="@+id/tSpecialOffers"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:scrollbars="none"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:id="@+id/firstSpecialOffer"
                        android:layout_width="300dp"
                        android:layout_height="112dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="center"
                        app:srcCompat="@drawable/ic_special_offer"
                        android:contentDescription="@string/sale_30" />

                    <ImageView
                        android:id="@+id/secondSpecialOffer"
                        android:layout_width="300dp"
                        android:layout_height="112dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="center"
                        app:srcCompat="@drawable/ic_special_offer_2"
                        android:contentDescription="@string/birthday_present" />

                </LinearLayout>

            </HorizontalScrollView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:subtitleTextColor="@color/black"
                app:titleTextColor="@color/black">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/moscow"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="24dp"
                        app:srcCompat="@drawable/ic_switch"
                        android:contentDescription="@string/choose_city" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_qr_code"
                    tools:ignore="ContentDescription" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <HorizontalScrollView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp">

                <Button
                    style="@style/Button"
                    android:layout_width="88dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/category_pressed_button_background"
                    android:text="@string/pizza"
                    android:textAllCaps="false"
                    android:textColor="@color/accent" />

                <Button
                    style="@style/Button"
                    android:layout_width="88dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/category_button_background"
                    android:text="@string/combo"
                    android:textAllCaps="false" />

                <Button
                    style="@style/Button"
                    android:layout_width="88dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/category_button_background"
                    android:text="@string/Dessert"
                    android:textAllCaps="false" />

                <Button
                    style="@style/Button"
                    android:layout_width="88dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/category_button_background"
                    android:text="@string/drinks"
                    android:textAllCaps="false" />

                <Button
                    style="@style/Button"
                    android:layout_width="88dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/category_button_background"
                    android:text="@string/snacks"
                    android:textAllCaps="false" />

            </LinearLayout>

        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pizzaRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:itemCount="3"
        tools:listitem="@layout/list_of_pizza" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="@color/gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/accent"
            app:drawableTopCompat="@drawable/ic_menu"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile"
            app:drawableTopCompat="@drawable/ic_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/basket"
            app:drawableTopCompat="@drawable/ic_basket" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>